# ozon-free-items

./: .env.example  .gitignore  README.md  ozon_drission.py  parse_html.py  pyproject.toml  ruff.toml
ozon_tracker/: manage.py
ozon_tracker/ozon_tracker/: asgi.py  settings.py  urls.py  wsgi.py
