[project]
name = "ozon-free-items"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "django>=6.0.7",
    "django-q2>=1.10.0",
    "drissionpage>=4.1.1.4",
    "playwright>=1.61.0",
    "playwright-stealth>=2.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
